--- a/app.json
+++ b/app.json
@@ -11,9 +11,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#365314"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -23,11 +21,14 @@
         "backgroundColor": "#365314"
       }
     },
-    "androidStatusBar":{
-       "barStyle":"light-content",
-        "backgroundColor":"#365314"
+    "androidStatusBar": {
+      "barStyle": "light-content",
+      "backgroundColor": "#365314"
     },
-
+    "androidNavigationBar": {
+      "backgroundColor": "#365314",
+      "barStyle": "light-content"
+    },
     "web": {
       "favicon": "./assets/favicon.png"
     }
