--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-gesture-handler": "~2.12.0"
+    "react-native-gesture-handler": "~2.12.0",
+    "expo-updates": "~0.18.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
